refactor ratings
